--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html></html>
+<html lang="pt-br">
    <meta charset="UTF-8">
+   <title>JOGOS ELETRÔNICOS</title>
    
    <h1>JOGOS ELETRÔNICOS</h1>
 
