fazendo corpo e cabeca pt2

--- a/index.html
+++ b/index.html
@@ -2,29 +2,25 @@
 <html lang="pt-br">
     <head>
         <meta charset="UTF-8">
-         <title>JOGOS ELETRÔNICOS</title>
+        <title>JOGOS ELETRÔNICOS</title>
    </head>
-   <body></body>
-   <h1>JOGOS ELETRÔNICOS</h1>
+   <body>
+        <h1>JOGOS ELETRÔNICOS</h1>
 
         <p>pós a Terceira Revolução Industrial, de 1950 até os dias atuais, a incorporação de aparelhos eletrônicos em meio a vida social da população é de frequente
-    crescimento. E com os jogos eletrônicos não é diferente. Os jogos eletrônicos tem se tornado cada vez mais uma forma de distração e entretenimento 
-    populacional, tornando cada vez maior a interação do homem com a tecnologia. 
-</p>
+        crescimento. E com os jogos eletrônicos não é diferente. Os jogos eletrônicos tem se tornado cada vez mais uma forma de distração e entretenimento 
+        populacional, tornando cada vez maior a interação do homem com a tecnologia. </p>
 
-       <p>Em fevereiro de 2020, a Pesquisa Game Brasil (PGB) realizou a sua 7ª edição com um estudo sobre a quantidade de pessoas que jogam jogos eletrônicos. 
-A seguinte pesquisa constatou que 73,4% da população brasileira utiliza algum jogo eletrônico para seu entretenimento. Levando em conta que o Brasil
-tem 209,5 milhões de habitantes, segundo dados fornecidos pelo Instituto Brasileiro de Geografia e Estatística (IBGE), são aproximadamente 154 milhões de
-jogadores no país. Para se ter uma ideia, esse número representa a população da França e da Alemanha somadas. (MAIS..., 2020) 
-</P>
+        <p>Em fevereiro de 2020, a Pesquisa Game Brasil (PGB) realizou a sua 7ª edição com um estudo sobre a quantidade de pessoas que jogam jogos eletrônicos. 
+        A seguinte pesquisa constatou que 73,4% da população brasileira utiliza algum jogo eletrônico para seu entretenimento. Levando em conta que o Brasil
+        tem 209,5 milhões de habitantes, segundo dados fornecidos pelo Instituto Brasileiro de Geografia e Estatística (IBGE), são aproximadamente 154 milhões de
+        jogadores no país. Para se ter uma ideia, esse número representa a população da França e da Alemanha somadas. (MAIS..., 2020) </P>
 
-         <p>Além disso, a média de idade dos jogadores casuais está entre 25 e 34 anos, faixa que corresponde a 33,6% dos gamers que pertencem a esse grupo, sendo que
-    34,7% desse público possui mais de 50 MB de internet. Outro dado relevante da 7ª Edição da PGB é que a faixa etária predominante dos gamers hardcore
-    está entre os 16 e os 24 anos. (MAIS..., 2020) 
-</p>
+        <p>Além disso, a média de idade dos jogadores casuais está entre 25 e 34 anos, faixa que corresponde a 33,6% dos gamers que pertencem a esse grupo, sendo que
+        34,7% desse público possui mais de 50 MB de internet. Outro dado relevante da 7ª Edição da PGB é que a faixa etária predominante dos gamers hardcore
+        está entre os 16 e os 24 anos. (MAIS..., 2020)  </p>
 
-     <p>Portanto, o seguinte trabalho apresenta as seguintes seções: além desta introdução; na seção 2, os impactos positivos; na seção 3, os impactos negativos; e,
-    por fim, são destacadas as considerações finais do trabalho e as referências bibliográficas utilizadas. 
-</p>
-</body>
+        <p>Portanto, o seguinte trabalho apresenta as seguintes seções: além desta introdução; na seção 2, os impactos positivos; na seção 3, os impactos negativos; e,
+        por fim, são destacadas as considerações finais do trabalho e as referências bibliográficas utilizadas. </p>
+    </body>
 </html>
