--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <title>JOGOS ELETRÔNICOS</title>
+        <link rel="stylesheet" hrel="style.css">
+        
    </head>
    <body>
         <h1>JOGOS ELETRÔNICOS</h1>
